# group_project-team_5

./: .gitignore  vercel.json  功能描述和实现计划.md
backend/: .env.example  .gitignore  AI_PAPER_SCORING_IMPLEMENTATION_PLAN_V1.md  API_FINAL_DOCS.md  API_INTERFACE_CHANGELOG.md  API_PAPER_CONTRACT_V1.md  API_PAPER_CONTRACT_V2_ATTEMPTS.md  API_PAPER_DOCS.md  API_QUIZ_CONTRACT_V2.md  API_QUIZ_DOCS.md  PAPER_ATTEMPTS_ACCEPTANCE_CHECKLIST_V1.md  PAPER_ATTEMPTS_MIGRATION_PLAN_V1_REVIEW.md  QUIZ_ACCEPTANCE_CHECKLIST.md  QUIZ_ACCEPTANCE_CHECKLIST_V2.md  README.md  alembic.ini  main.py  openstudy_dev_data_only.sql  openstudy_dev_full_dump.sql  openstudy_dev_schema.sql  pyproject.toml  pytest.ini  requirements.txt  vercel.json  后端脚手架构建计划_405edf39.plan.md
backend/alembic/: env.py
backend/alembic/versions/: 20260407_add_teacher_tasks.py  20260408_teacher_stat_txt.py  20260409_papers_source_pdf_path.py  20260410_lesson_decks.py  (+13 more)
backend/api/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/paper_exapmle/: README.md  import_manifest.example.json  import_manifest.generated.json  import_manifest.hf.generated.json
backend/scripts/: __init__.py  ai_clean_questions.py  ai_fill_tbd_answers.py  check_db_preflight.py  check_teacher_tasks_db.py  debug_render_code_detection.py  extract_pdfs_to_normalized.py  fetch_hf_data.py  import_documents.py  import_paper_examples.py  import_slides_from_pdf.py  inspect_lab_render_code.py  repro_create_session.py  seed_labs.py  seed_quiz_validation_data.py  seed_sample_physics_lesson.py
backend/tests/: conftest.py
(+210 files in other folders)
